added delete, update and list apis
